--- a/test/sample.css
+++ b/test/sample.css
@@ -74,3 +74,7 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page:hover.ui-state-active,
     background-image: none;
     border-color: #360152;
 }
+
+body .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item.ui-state-highlight {
+    background-color: #700fa4;
+}
